# nppes-health

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  LICENSE  README.md  pre-commit-config.yaml  pyproject.toml
.github/workflows/: lint-and-format.yml
code/: Makefile  database.py  main.py  requirements.txt  utils.py
code/utils/: database.py  gen_schema.py  global_variables.py  run_utils.py  utils.py
nppes_medicare/: database.py  gen_schema.py  global_variables.py  main.py  utils.py
nppes_nber/: database.py  main.py  query_database.py  utils.py
