[tool.poetry]
name = "nppes-nber"
version = "0.1.0"
description = ""
authors = ["Aaron Haefner <aaronhaefner@uchicago.edu>"]
readme = "README.md"
packages = [{include = "nppes_nber"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
ipython = "^8.25.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.30"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
